Section 12. Relative, Absolute & Fixed Positioning - 46. Overflows

--- a/master-css/learning-css/05-exercise/styles.css
+++ b/master-css/learning-css/05-exercise/styles.css
@@ -77,6 +77,9 @@ color: white;
   width: 30%;
   border: 1px solid red;
   min-height: 500px;
+  max-height: 650px;
+  text-align: center;
+  overflow-y:scroll;
 }
 
 #content > h1 {
@@ -101,6 +104,8 @@ color: white;
   color: #444;
   text-transform: uppercase;
   box-shadow: 5px 5px 10px gray;
+  border-radius: 50px 10px 4px 61px;
+  /* border-radius: 999px; */
 }
 
 .inner-shadow{
